--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "ApeSwap-Banana-Farm",
+  "name": "UniHubSwap-Cum-Farm",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "migrate:dev": "truffle migrate --network development --reset",
     "migrate:testnet": "truffle migrate --network testnet --reset",
     "migrate:bsc": "truffle migrate --network bsc --dry-run",
-    "gen:standard": "~/.local/bin/solt write contracts/MasterApe.sol --npm",
+    "gen:standard": "~/.local/bin/solt write contracts/MasterUniHub.sol --npm",
     "compile": "truffle compile --network bscTestnet",
-    "flatten": "truffle-flattener ./contracts/MasterApe.sol --output ./MasterApe_flat.sol",
+    "flatten": "truffle-flattener ./contracts/MasterUniHub.sol --output ./MasterUniHub_flat.sol",
     "flatten:timelock": "truffle-flattener ./contracts/Timelock.sol --output ./Timelock_flat.sol",
     "encode": "ts-node ./scripts/encode.ts",
     "test": "npx builder test",
